--- a/index.html
+++ b/index.html
@@ -5,26 +5,42 @@
     <title> GAME OVER</title>
 </head>
 <body>
-    <h2>У нас есть всё для классного отдыха с друзьями!</h2>
+    <h2> Мeню </h2>
     <ul> 
-        <li> VR очки</li>
-        <li> Аудио-система 5.1 с отличным звуком</li>
-        <li> Караоке (4 микрофона)</li>
-        <li> Настольные игры</li>
-        <li> Кино сервисы Netflix, IVI, MegoGo, КиноПоиск, Okko</li>
-        <li> PlayStation 5</li>
+        <a href = ""><li>Залы</li></a>
+        <a href = ""><li>О нас </li></a>
+        <a href = ""><li>Бронь </li></a>
+        <a href = ""><li>Отзывы </li></a>
+        <a href = ""><li>Контакты </li></a>
     </ul>
-    <h2> Наши залы</h2>
+    <h3>У нас есть всё для классного отдыха с друзьями!</h3>
+    <ul> 
+        <li> <p style="text-indent:20px"> VR очки</p></li>
+        <li> <p style="text-indent:20px">Аудио-система 5.1 с отличным звуком</p></li>
+        <li><p style="text-indent:20px"> Караоке (4 микрофона)</p></li>
+        <li> <p style="text-indent:20px">Настольные игры</p></li>
+        <li> <p style="text-indent:20px">Кино сервисы Netflix, IVI, MegoGo, КиноПоиск, Okko</p></li>
+        <li><p style="text-indent:20px">PlayStation 5</p></li>
+    </ul>
+    <h3> Наши залы</h3>
     <ol> 
-        <li> 80's vibes</li>
-        <li> Star wars</li>
-        <li> Wild west</li>
-        <li> Neon style</li>
+        <a href = ""><li> 80's vibes</li></a>
+        <a href = ""><li> Star wars</li></a>
+        <a href = ""><li> Wild west</li></a>
+        <a href = ""> <li> Neon style</li></a>
     </ol>
-    <h2>О нас</h2>  
+    <h3>О нас</h3>  
     <p>Для наших гостей мы создали <i>концептуально новое игровое пространство виртуальной реальности</i> в центральной части города.</p>
     <p>Каждый день мы стараемся создавать для вас самую лучшую игровую атмосферу и радовать Вас топовыми игровыми разработками со всего мира.  </p>
-    <blockquote> <p><b>GAME OVER</b> &#8212; это место незабываемых впечатлений</p> 
+    <blockquote> <p><b>&laquo;GAME OVER</b> &#8212; это место незабываемых впечатлений&raquo;</p> 
     <cite><em>Аркадий Абакшин, создатель игровой территории GAME OVER</em> </cite></blockquote>
+    <h3>Контакты</h3>
+    <p>г. Москва ул. Аквамарина, 16</p>
+    <p><a href="tel:89509302893">8(950)930-28-93</a></p>
+    <p><a href="GameOver@gmail.com">GameOver@gmail.com</a></p>
+    <ul> 
+        <li> <a href="http:\\vk.ru">Vkontakte</a></li>
+        <li> <a href="http:\\Telegram.org">Telegram</a></li>
+    </ul>
 </body>
 </html>
