--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <h3>Контакты</h3>
     <p>г. Москва ул. Аквамарина, 16</p>
     <p><a href="tel:89509302893">8(950)930-28-93</a></p>
-    <p><a href="GameOver@gmail.com">GameOver@gmail.com</a></p>
+    <p><a href="mailto:GameOver@gmail.com">GameOver@gmail.com</a></p>
     <ul> 
         <li> <a href="http:\\vk.ru">Vkontakte</a></li>
         <li> <a href="http:\\Telegram.org">Telegram</a></li>
