--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <body>
     <h2> Мeню </h2>
     <ul> 
-        <a href = ""><li>Залы</li></a>
-        <a href = ""><li>О нас </li></a>
-        <a href = ""><li>Бронь </li></a>
-        <a href = ""><li>Отзывы </li></a>
-        <a href = ""><li>Контакты </li></a>
+        <li><a href = "">Залы</a></li>
+        <li> <a href = "">О нас </a></li>
+        <li> <a href = "">Бронь </a></li>
+        <li> <a href = "">Отзывы </a></li>
+        <li> <a href = "">Контакты </a></li>
     </ul>
     <h3>У нас есть всё для классного отдыха с друзьями!</h3>
     <ul> 
@@ -24,10 +24,10 @@
     </ul>
     <h3> Наши залы</h3>
     <ol> 
-        <a href = ""><li> 80's vibes</li></a>
-        <a href = ""><li> Star wars</li></a>
-        <a href = ""><li> Wild west</li></a>
-        <a href = ""><li> Neon style</li></a>
+        <li>  <a href = ""> 80's vibes</a></li>
+        <li>  <a href = ""> Star wars</a></li>
+        <li>  <a href = ""> Wild west</a></li>
+        <li>  <a href = ""> Neon style</a></li>
     </ol>
     <h3>О нас</h3>  
     <p>Для наших гостей мы создали <i>концептуально новое игровое пространство виртуальной реальности</i> в центральной части города.</p>
@@ -39,8 +39,8 @@
     <p><a href="tel:89509302893">8(950)930-28-93</a></p>
     <p><a href="mailto:GameOver@gmail.com">GameOver@gmail.com</a></p>
     <ul> 
-        <li> <a href="http:\\vk.ru">Vkontakte</a></li>
-        <li> <a href="http:\\Telegram.org">Telegram</a></li>
+        <li> <a href="http://vk.ru">Vkontakte</a></li>
+        <li> <a href="http://Telegram.org">Telegram</a></li>
     </ul>
 </body>
 </html>
