--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <h3>О нас</h3>  
     <p>Для наших гостей мы создали <i>концептуально новое игровое пространство виртуальной реальности</i> в центральной части города.</p>
     <p>Каждый день мы стараемся создавать для вас самую лучшую игровую атмосферу и радовать Вас топовыми игровыми разработками со всего мира.  </p>
-    <blockquote> <p><b>&laquo;GAME OVER</b> &#8212; это место незабываемых впечатлений&raquo;</p> 
+    <blockquote> <p>&laquo;<b>GAME OVER</b> &#8212; это место незабываемых впечатлений&raquo;</p> 
     <cite><em>Аркадий Абакшин, создатель игровой территории GAME OVER</em> </cite></blockquote>
     <h3>Контакты</h3>
     <p>г. Москва ул. Аквамарина, 16</p>
