--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title> GAME OVER</title>
+    <link type="image/svg+xml" rel = "icon" href="img/icon.svg">
+    <title>GAME OVER</title>
 </head>
 <body>
+    <img src="img/logo.png" alt="Логотип GO" height="66">
     <h2> Мeню </h2>
+    <nav>  
     <ul> 
         <li><a href = "">Залы</a></li>
         <li> <a href = "">О нас </a></li>
@@ -13,11 +16,12 @@
         <li> <a href = "">Отзывы </a></li>
         <li> <a href = "">Контакты </a></li>
     </ul>
-    <h3>У нас есть всё для классного отдыха с друзьями!</h3>
+    </nav>
+    <h2>У нас есть всё для классного отдыха с друзьями!</h2>
     <ul> 
-        <li><p style="text-indent:20px"> VR очки</p></li>
-        <li><p style="text-indent:20px">Аудио-система 5.1 с отличным звуком</p></li>
-        <li><p style="text-indent:20px"> Караоке (4 микрофона)</p></li>
+        <li><p style="text-indent:20px"><figure><img src="img/vr.jpg"alt="VR очки"height="228"><figcaption>VR очки</figcaption></figure></p></li>
+        <li><p style="text-indent:20px"><figure><img src="img/audio.jpg"alt="Аудио-система"height="228"><figcaption>Аудио-система 5.1 с отличным звуком</figcaption></figure></p></li>
+        <li><p style="text-indent:20px">Караоке (4 микрофона)</p></li>
         <li><p style="text-indent:20px">Настольные игры</p></li>
         <li><p style="text-indent:20px">Кино сервисы Netflix, IVI, MegoGo, КиноПоиск, Okko</p></li>
         <li><p style="text-indent:20px">PlayStation 5</p></li>
@@ -35,6 +39,7 @@
     <blockquote> <p>&laquo;<b>GAME OVER</b> &#8212; это место незабываемых впечатлений&raquo;</p> 
     <cite><em>Аркадий Абакшин, создатель игровой территории GAME OVER</em> </cite></blockquote>
     <h3>Контакты</h3>
+    <address style="font-style: normal;">
     <p>г. Москва ул. Аквамарина, 16</p>
     <p><a href="tel:89509302893">8(950)930-28-93</a></p>
     <p><a href="mailto:GameOver@gmail.com">GameOver@gmail.com</a></p>
@@ -42,5 +47,6 @@
         <li> <a href="http://vk.ru">Vkontakte</a></li>
         <li> <a href="http://Telegram.org">Telegram</a></li>
     </ul>
+    </address>
 </body>
 </html>
