--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     </nav>
     <h2>У нас есть всё для классного отдыха с друзьями!</h2>
     <ul> 
-        <li><p style="text-indent:20px"><figure><img src="img/vr.jpg" alt="VR очки" height="228"><figcaption>VR очки</figcaption></figure></p></li>
-        <li><p style="text-indent:20px"><figure><img src="img/audio.jpg" alt="Аудио-система" height="228"><figcaption>Аудио-система 5.1 с отличным звуком</figcaption></figure></p></li>
+        <li><figure><img src="img/vr.jpg" alt="VR очки" height="228"><figcaption>VR очки</figcaption></figure></li>
+        <li><figure><img src="img/audio.jpg" alt="Аудио-система" height="228"><figcaption>Аудио-система 5.1 с отличным звуком</figcaption></figure></li>
         <li><p style="text-indent:20px">Караоке (4 микрофона)</p></li>
         <li><p style="text-indent:20px">Настольные игры</p></li>
         <li><p style="text-indent:20px">Кино сервисы Netflix, IVI, MegoGo, КиноПоиск, Okko</p></li>
