--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>GAME OVER</title>
 </head>
 <body>
-    <img src="img/logo.png" alt="Логотип GO" height="66">
+    <a href=""><img src="img/logo.png" alt="Логотип GO" height="66" width="120"></a>
     <h2> Мeню </h2>
     <nav>  
     <ul> 
@@ -19,12 +19,12 @@
     </nav>
     <h2>У нас есть всё для классного отдыха с друзьями!</h2>
     <ul> 
-        <li><figure><img src="img/vr.jpg" alt="VR очки" height="228"><figcaption>VR очки</figcaption></figure></li>
-        <li><figure><img src="img/audio.jpg" alt="Аудио-система" height="228"><figcaption>Аудио-система 5.1 с отличным звуком</figcaption></figure></li>
-        <li><p style="text-indent:20px">Караоке (4 микрофона)</p></li>
-        <li><p style="text-indent:20px">Настольные игры</p></li>
-        <li><p style="text-indent:20px">Кино сервисы Netflix, IVI, MegoGo, КиноПоиск, Okko</p></li>
-        <li><p style="text-indent:20px">PlayStation 5</p></li>
+        <li><figure><img src="img/vr.jpg" alt="VR очки" height="228" width="380"><figcaption>VR очки</figcaption></figure></li>
+        <li><figure><img src="img/audio.jpg" alt="Аудио-система" height="228" width="380"><figcaption>Аудио-система 5.1 с отличным звуком</figcaption></figure></li>
+        <li><figure><img src="img/micro.jpg" alt="Караоке" height="228" width="380"><figcaption>Караоке (4 микрофона)</figcaption></figure></li>
+        <li><figure><img src="img/game.jpg" alt="Настольные игры" height="228" width="380"><figcaption>Настольные игры</figcaption></figure></li>
+        <li><figure><img src="img/netflix.jpg" alt="Кинотеатр" height="228" width="380"><figcaption>Кино сервисы Netflix, IVI, MegoGo, КиноПоиск, Okko</figcaption></figure></li>
+        <li><figure><img src="img/sony.jpg" alt="VR очки" height="228" width="380"><figcaption>PlayStation 5</figcaption></figure></li>
     </ul>
     <h3> Наши залы</h3>
     <ol> 
