--- a/index.html
+++ b/index.html
@@ -33,6 +33,49 @@
         <li>  <a href = ""> Wild west</a></li>
         <li>  <a href = ""> Neon style</a></li>
     </ol>
+    <form action="https://jsonplaceholder.typicode.com/posts" method="post">
+    <h3>Забронировать</h3>
+        <fieldset>
+            <label><input type="radio" name="hall" value="80's vibes"> 80's vibes</label>
+            <label><input type="radio" name="hall" value="star wars"> star wars</label>
+            <label> <input type="radio" name="hall" value="wild west"> wild west</label>
+            <label><input type="radio" name="hall" value="neon style"> neon style</label>
+        </fieldset>
+        <fieldset> 
+            <legend> Собери набор развлечений</legend>
+            <fieldset> 
+                <legend> Приставка:</legend>
+                <label><input type="radio" name="console" value="PlayStation">PlayStation</label>
+                <label><input type="radio" name="console" value="Sega Mega Drive">Sega Mega Drive</label>
+                <label><input type="radio" name="console" value="X-box One S">X-box One S</label>
+                <label><input type="radio" name="console" value="Dendy">Dendy</label>
+            </fieldset>
+            <fieldset> 
+                <legend> Настольные игры:</legend>
+                <label><input type="checkbox" name="Board game" value="Jenga">Jenga</label>
+                <label><input type="checkbox" name="Board game" value="Monopoly">Monopoly</label>
+                <label><input type="checkbox" name="Board game" value="Манчкин">Манчкин</label>
+                <label><input type="checkbox" name="Board game" value="Alias">Alias</label>
+            </fieldset>
+            <fieldset> 
+                <legend> Дополнительно:</legend>
+                <label><input type="checkbox" name="Караоке" value="Караоке">Караоке</label>
+                <label><input type="checkbox" name="VR" value="VR">VR</label>
+            </fieldset>
+        </fieldset>
+        <fieldset> 
+            <legend>Выбери дату и время</legend>
+            Дата*<input type="date" required>Время*<input type="time" required><br>
+            Количетсво человек*<input type="number" name="number of people" max="10" required><br>
+            Имя*<input type="text" name="name" maxlength="12" required><br>
+            Фамилия*<input type="text" name="surname" maxlength="12" required><br>
+            Номер телеофна*<input type="tel" name="tel" placeholder="+7-999-999-99-99" required pattern="^\+?[7-8]-?[0-9]{3}-?[0-9]{3}-?[0-9]{2}-?[0-9]{2}$"><br>
+            <input type="checkbox" name="older 18" value="yes"> Я старше 18 лет
+
+        </fieldset>
+        <button type="submit">Забронировать </button>
+        <input type="checkbox" name="agree processing of data" value="yes" required>Согласен на обработку данных
+    </form>
     <h3>О нас</h3>  
     <p>Для наших гостей мы создали <i>концептуально новое игровое пространство виртуальной реальности</i> в центральной части города.</p>
     <p>Каждый день мы стараемся создавать для вас самую лучшую игровую атмосферу и радовать Вас топовыми игровыми разработками со всего мира.  </p>
