--- a/index.html
+++ b/index.html
@@ -35,22 +35,22 @@
     </ol>
     <form action="https://jsonplaceholder.typicode.com/posts" method="post">
     <h3>Забронировать</h3>
-        <fieldset>
+        <fieldset style="width: 435px;">
             <label><input type="radio" name="hall" value="80's vibes"> 80's vibes</label>
             <label><input type="radio" name="hall" value="star wars"> star wars</label>
             <label> <input type="radio" name="hall" value="wild west"> wild west</label>
             <label><input type="radio" name="hall" value="neon style"> neon style</label>
         </fieldset>
-        <fieldset> 
+        <fieldset style="width: 435px;"> 
             <legend> Собери набор развлечений</legend>
-            <fieldset> 
+            <fieldset > 
                 <legend> Приставка:</legend>
                 <label><input type="radio" name="console" value="PlayStation">PlayStation</label>
                 <label><input type="radio" name="console" value="Sega Mega Drive">Sega Mega Drive</label>
                 <label><input type="radio" name="console" value="X-box One S">X-box One S</label>
                 <label><input type="radio" name="console" value="Dendy">Dendy</label>
             </fieldset>
-            <fieldset> 
+            <fieldset > 
                 <legend> Настольные игры:</legend>
                 <label><input type="checkbox" name="Board game" value="Jenga">Jenga</label>
                 <label><input type="checkbox" name="Board game" value="Monopoly">Monopoly</label>
@@ -63,7 +63,7 @@
                 <label><input type="checkbox" name="VR" value="VR">VR</label>
             </fieldset>
         </fieldset>
-        <fieldset> 
+        <fieldset style="width: 435px;"> 
             <legend>Выбери дату и время</legend>
             Дата*<input type="date" required>Время*<input type="time" required><br>
             Количетсво человек*<input type="number" name="number of people" max="10" required><br>
