--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link type="image/svg+xml" rel = "icon" href="img/icon.svg">
     <title>GAME OVER</title>
-</head>
+    </head>
 <body>
     <a href=""><img src="img/logo.png" alt="Логотип GO" height="66" width="120"></a>
     <h2> Мeню </h2>
@@ -35,13 +35,13 @@
     </ol>
     <form action="https://jsonplaceholder.typicode.com/posts" method="post">
     <h3>Забронировать</h3>
-        <fieldset style="width: 435px;">
+        <fieldset style="width: 445px;">
             <label><input type="radio" name="hall" value="80's vibes"> 80's vibes</label>
             <label><input type="radio" name="hall" value="star wars"> star wars</label>
             <label> <input type="radio" name="hall" value="wild west"> wild west</label>
             <label><input type="radio" name="hall" value="neon style"> neon style</label>
         </fieldset>
-        <fieldset style="width: 435px;"> 
+        <fieldset style="width: 445px;"> 
             <legend> Собери набор развлечений</legend>
             <fieldset > 
                 <legend> Приставка:</legend>
@@ -63,13 +63,13 @@
                 <label><input type="checkbox" name="VR" value="VR">VR</label>
             </fieldset>
         </fieldset>
-        <fieldset style="width: 435px;"> 
+        <fieldset style="width: 445px;"> 
             <legend>Выбери дату и время</legend>
-            Дата*<input type="date" required>Время*<input type="time" required><br>
-            Количетсво человек*<input type="number" name="number of people" max="10" required><br>
-            Имя*<input type="text" name="name" maxlength="12" required><br>
-            Фамилия*<input type="text" name="surname" maxlength="12" required><br>
-            Номер телеофна*<input type="tel" name="tel" placeholder="+7-999-999-99-99" required pattern="^\+?[7-8]-?[0-9]{3}-?[0-9]{3}-?[0-9]{2}-?[0-9]{2}$"><br>
+            Дата* <input type="date" required style="margin: 3px;"> Время* <input type="time" required style="margin: 3px;"><br>
+            Количетсво человек* <input type="number" name="number of people" max="10" required><br>
+            Имя* <input type="text" name="name" maxlength="12" required style="margin: 3px;"><br>
+            Фамилия* <input type="text" name="surname" maxlength="12" required><br>
+            Номер телеофна* <input type="tel" name="tel" style="margin: 3px;" placeholder="+7-999-999-99-99" required pattern="^\+?[7-8]-?[0-9]{3}-?[0-9]{3}-?[0-9]{2}-?[0-9]{2}$" ><br>
             <input type="checkbox" name="older 18" value="yes"> Я старше 18 лет
 
         </fieldset>
