--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                 <fieldset> <legend> Выбери дату и время</legend>       
                     <input type="date" required style="margin: 3px;">
                     <input type="time" required style="margin: 3px;">
-                    <input type="text" name="name" maxlength="12" required style="margin: 3px;" placeholder="Имя">
-                    <input type="tel" name="tel" style="margin: 3px;" placeholder="+7-999-999-99-99" required pattern="^\+?[7-8]-?[0-9]{3}-?[0-9]{3}-?[0-9]{2}-?[0-9]{2}$" >
+                    <input type="text" name="name" maxlength="12" required placeholder="Имя">
+                    <input type="tel" name="tel" placeholder="+7-999-999-99-99" required pattern="^\+?[7-8]-?[0-9]{3}-?[0-9]{3}-?[0-9]{2}-?[0-9]{2}$" >
                 <select name="number of people" required >
                     <option disabled selected hidden value="">Сколько гостей</option>  
                     <option value="1"> 1 гость</option>
