--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                     <label><input type="checkbox" name="VR" value="VR">VR</label> 
                 </fieldset>  
                 <fieldset> <legend> Выбери дату и время</legend>       
-                    <input type="date" required style="margin: 3px;">
-                    <input type="time" required style="margin: 3px;">
+                    <input type="date" required>
+                    <input type="time" required>
                     <input type="text" name="name" maxlength="12" required placeholder="Имя">
                     <input type="tel" name="tel" placeholder="+7-999-999-99-99" required pattern="^\+?[7-8]-?[0-9]{3}-?[0-9]{3}-?[0-9]{2}-?[0-9]{2}$" >
                 <select name="number of people" required >
