--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <label><input type="checkbox" name="Bgame" value="Alias">Alias</label>
                 </fieldset>
                 <fieldset> <legend> Дополнительно</legend>
-                    <label><input type="checkbox" name="Караоке" value="Караоке">Караоке</label>
+                    <label><input type="checkbox" name="karaoke" value="Караоке">Караоке</label>
                     <label><input type="checkbox" name="VR" value="VR">VR</label> 
                 </fieldset>  
                 <fieldset> <legend> Выбери дату и время</legend>       
@@ -101,21 +101,21 @@
                 <li>  
                     <figure>             
                     <img src="img/man1.jpg" alt="Фото мужчины, которому очень понравилось у нас" width="200" height="200" > 
-                    Были с друзьями в зале wild west, очень понравилось, окунулись с головой в мир дикого запада.
+                    <p>Были с друзьями в зале wild west, очень понравилось, окунулись с головой в мир дикого запада.</p>
                     <figcaption>Андрей Лисовец </figcaption>  
                     </figure>
                 </li>
                 <li> 
                     <figure>
                 <img src="img/man2.jpg" alt="Фото мужчины, которому очень понравилось у нас" width="200" height="200"> 
-                Великолептный VR, если думаете, что найдете в городе лучше, ошибаетесь. Очень рекомендую.
+                <p>Великолептный VR, если думаете, что найдете в городе лучше, ошибаетесь. Очень рекомендую.</p>
                 <figcaption>Всеволод Елистратов </figcaption>
                     </figure>
                 </li>
                 <li>
                     <figure> 
                 <img src="img/man3.png" alt="Фото мужчины, которому очень понравилось у нас" width="200" height="200"> 
-                Пели в караоке, поиграли в Jenga и Monopoly. Вполне уютно, по домашнему, 5 баллов.
+                <p>Пели в караоке, поиграли в Jenga и Monopoly. Вполне уютно, по домашнему, 5 баллов.</p>
                 <figcaption>Сергей Иванов </figcaption> 
                     </figure>
                 </li>
