--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <link type="image/svg+xml" rel = "icon" href="img/icon.svg">
     <title>GAME OVER</title>
+    <link rel="stylesheet" href="style.css">
     </head>
 <body>
+    <div class="wrapper">
     <header>
     <a href=""><img src="img/logo.png" alt="Логотип GO" height="66" width="120"></a>
     <h2> Мeню </h2>
@@ -135,6 +137,7 @@
     </ul>
     </address>
     </div>
-</footer>    
+</footer>
+    </div>    
 </body>
 </html>
