--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link type="image/svg+xml" rel = "icon" href="img/icon.svg">
     <title>GAME OVER</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
     </head>
 <body>
     <div class="wrapper">
@@ -121,6 +121,14 @@
                 <figcaption>Сергей Иванов </figcaption> 
                     </figure>
                 </li>
+            </ul>
+            <h3> Частые вопросы</h3>
+            <ul class="questions"> 
+                <li class="question"> Можно ли забронировать комнату онлайн?</li>
+                <li class="question"> Могут ли мне вернуть деньги за бронь?</li>
+                <li class="question"> Какая комната самая популярная</li>
+                <li class="question"> Как получить VIP карту?</li>
+                <li class="question"> Какая комната самая популярная?</li>
             </ul>
     </div>
 </main>
