--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <link rel="stylesheet" href="css/style.css">
     </head>
 <body>
-    <div class="container">
     <main>
+    <div class="container">
     <section class="banner-section">
         <div class="banner"> 
             <p class="banner__logo" > GAME OVER</p>
             <p class="banner__logo-small" > Новый формат игр для отдыха</p>
         </div>
     </section>
+    </div>
+    <div class="container">
     <section class="halls">
     <h1 class="halls__title"> Наши залы</h1>
     <ul class="halls__list"> 
@@ -32,6 +34,8 @@
                 </li>
     </ul>
     </section>
+    </div>
+    <div class="container">
     <section class="reserve">
         <h2 class="reserve__title">Забронировать</h2>
             <form  action="https://jsonplaceholder.typicode.com/posts" method="post">
@@ -76,6 +80,8 @@
     
             </form>
     </section>
+    </div>
+    <div class="container">
     <section class="about">
         <h2 class="about__title">О нас</h2>  
         <p class="about__text">Для наших гостей мы создали <i>концептуально новое игровое пространство виртуальной реальности</i> в центральной части города.</p>
@@ -86,6 +92,8 @@
         <div class="about__author"></div> 
         <cite class="about__author_text">Аркадий Абакшин, создатель игровой территории GAME OVER </cite></blockquote>
     </section>
+    </div>
+    <div class="container">
     <section class="faq">
         <h2 class="faq__title"> Частые вопросы</h2>
         <ul class="faq__questions"> 
@@ -96,7 +104,9 @@
                 <li class="question"> Какая комната самая популярная?</li>
             </ul>
     </section>
+    </div>
 </main>
+<div class="container">
 <footer class="footer">  
     
     <h2 class="footer__title">Контакты</h2>
