--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="css/style.css">
     </head>
 <body>
+    <div class="main-container">
     <main>
         <section class="banner-section">
         <div class="container">
-        <div class="banner"> 
             <p class="banner__logo" > GAME OVER</p>
-            <p class="banner__logo-small" > Новый формат игр для отдыха</p>
+        <div class="banner"> 
+            <p class="banner__logo-small" > Новый формат игр и отдыха</p>
         </div>
         </div>
     </section>
@@ -89,15 +90,20 @@
     <section class="about">
         <div class="container">
         <h2 class="about__title">О нас</h2>  
-        <p class="about__text">Для наших гостей мы создали <i>концептуально новое игровое пространство виртуальной реальности</i> в центральной части города.</p>
-        <p class="about__text">Каждый день мы стараемся создавать для вас самую лучшую игровую атмосферу и радовать Вас топовыми игровыми разработками со всего мира.  </p>
-    
-        <blockquote>  <p class="about__cite"> <span>&ldquo;</span>GAME OVER &mdash;
-  это место  незабываемых впечатлений<span>&rdquo;</span></p> 
-        <div class="about__author"></div> 
-        <cite class="about__author_text">Аркадий Абакшин, создатель игровой территории GAME OVER </cite></blockquote>
-    </div>
+        <img class="collage" src="img/about_collage.jpg" alt="collage">
+        <ul class="about__text_block"> 
+            <li> <p class="about__text1">Для наших гостей мы создали концептуально новое игровое пространство виртуальной реальности в центральной части города.</p> </li>
+            <li class="about__ptext">  <p class="about__text2">Каждый день мы стараемся создавать для вас самую лучшую игровую атмосферу и радовать Вас топовыми игровыми разработками со всего мира.  </p></li>
+            <li class="about__blcite">  <blockquote class="about__cite"><p> GAME OVER &mdash; это место  незабываемых впечатлений </p> </blockquote> </li>
+            <li>  <figure class="about__avatar"> <img src="img/icons-png/avatar-founder.png" alt="founder" >
+        <figcaption class="about__founder">Аркадий Абакшин, создатель игровой территории GAME OVER  </figcaption> 
+                    </figure> </li>
+        </ul>
+        </div> 
     </section>
+
+
+
     
     <section class="faq">
         <div class="container">
@@ -155,5 +161,6 @@
     </address>
 </div>
 </footer> 
+</div>
 </body>
 </html>
