--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
         <div class="container__title"> 
             <h1 class="section__title section__halls_title"> Наши залы</h1>
         </div>
-                <div class="fl"> 
-                <div class="one"> 
+                <div class="section__halls"> 
+                <div class="section__halls_one"> 
                     <a class="halls__link" href="#"> 80's vibes</a>
                 </div>
-                <div class="two">
+                <div class="section__halls_two">
                     <a class="halls__link" href="#"> Star wars </a> 
                 </div>
-                    <div class="three">
+                    <div class="section__halls_three">
                     <a class="halls__link" href="#"> Wild west</a>
                     </div>
-                    <div class="four">
+                    <div class="section__halls_four">
                     <a class="halls__link" href="#"> Neon style</a>
                     </div>
                 </div>
@@ -131,7 +131,7 @@
     <section class="review">
         <div class="container">
             <div class="container__title"> 
-            <h2 class="section__title section__title_review">Отзывы посетителей </h2>
+                <h2 class="section__title section__title_review">Отзывы посетителей </h2>
             </div>
     <ul class="sector__review"> 
         <li>  
