--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <link type="image/svg+xml" rel="icon" href="img/icons/icon.svg">
     <title>GAME OVER</title>
     <link rel="stylesheet" href="css/style.css">
+    <script> 
+                document.addEventListener('click', event => 
+                {if (event.target.matches('button')) 
+                { event.target.focus()  } })
+    </script>
 </head>
 <body>
 <header class="header">
