--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 
         <div class="sub_footer">
             <p class="sub_footer__text"> © Game Over, 2022</p>
-            <p class="sub_footer__text">
+            <p class="sub_footer__text sub_footer__mail">
                 <span> Design by Anastasia Ilina</span>
                 <a href="mailto:ilina9825@gmail.com" class="sub_footer"> ilina9825@gmail.com</a>
             </p>
