--- a/index.html
+++ b/index.html
@@ -267,36 +267,43 @@
     <section class="section" id="review">
         <div class="container">
             <h2 class="section__title section__title_review">Отзывы посетителей </h2>
-            <ul class="review__list">
-                <li>
-                    <figure class="review__img">
-                        <img class="review__img_photo" src="img/icons-png/review_max.png"
-                                alt="Фото мужчины, которому очень понравилось у нас" width="280" height="280">
-                        <p class="review_text"> Отмечали здесь день рождения с компанией друзей, все было очень круто!
-                            VR очки это просто бомба, никогда еще я не был в таком полном игровом погружении. Сервис на
-                            высоте! </p>
-                        <figcaption class="review__caption">Макс Самойлов</figcaption>
-                    </figure>
-                </li>
-                <li>
-                    <figure class="review__img">
-                        <img class="review__img_photo" src="img/icons-png/review_oksana.png"
-                                alt="Фото женщины, которому очень понравилось у нас" width="280" height="280">
-                        <p class="review_text"> Были в комнате Дикий Запад, пели в караоке под Шакиру, отличный
-                            получился корпоратив! У нас в городе больше нет подобных заведений </p>
-                        <figcaption class="review__caption">Оксана Григорьева</figcaption>
-                    </figure>
-                </li>
-                <li>
-                    <figure class="review__img">
-                        <img class="review__img_photo" src="img/icons-png/review_nikita.png"
-                                alt="Фото мужчины, которому очень понравилось у нас" width="280" height="280">
-                        <p class="review_text"> Немного подвисала игра в VR очках, а так все норм. Крутое оформление
-                            комнаты в стиле звездных войн, попал в атмосферу космоса </p>
-                        <figcaption class="review__caption">Никита Ященко</figcaption>
-                    </figure>
-                </li>
-            </ul>
+
+            <div class="review__list"> 
+                <div class="review__wrapper">
+                <div class="review__img img__max">  
+                </div>
+                <div class="review__text text"> 
+                    <p class="text__description"> Отмечали здесь день рождения с компанией друзей, все было очень круто! VR очки это просто бомба,
+                    никогда еще я не был в таком полном игровом погружении. Сервис на высоте!</p> 
+                </div>
+                <p class="review__author"> Макс Самойлов</p> 
+                </div>
+
+                <div class="review__wrapper">
+                    <div class="review__img img__oksana">  
+                    </div>
+                    <div class="review__text text"> 
+                        <p class="text__description"> Были в комнате Дикий Запад, пели в караоке под Шакиру,
+                                отличный получился корпоратив!
+                                У нас в городе больше нет подобных заведений</p> 
+                    </div>
+                    <p class="review__author"> Оксана Григорьева</p> 
+                    </div>
+
+                    <div class="review__wrapper">
+                        <div class="review__img img__nikita">  
+                        </div>
+                        <div class="review__text text"> 
+                            <p class="text__description"> Немного подвисала игра в VR очках, а так все норм. 
+                                Крутое оформление комнаты в стиле звездных войн, попал в атмосферу космоса</p> 
+                        </div>
+                        <p class="review__author">Никита Ященко</p> 
+                        </div>
+
+
+
+            </div>
+        
         </div>
     </section>
 
