--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <header class="header">
     <div class="container header__container">
         <div class="header__row">
-            <a class="header__logo-menu" href="#"> <img class="header__logo-menu-img" src="img/icons-png/menu-header.png"> </a>
+            <a class="header__logo-menu" href="#">  </a>
             <a class="header__logo logo" href="index.html">
                 <img class="logo__image" src="img/icons-png/logo--go-white.png" alt="Логотип Go" >
             </a>
@@ -108,13 +108,13 @@
             <h1 class="section__title section__halls_title"> Наши залы</h1>
             <div class="section__halls">
                 <div class="section__halls_one">
-                    <a class="halls__link" href="#"> 80's vibes</a>
+                    <a class="halls__link" href="80s-vibes.html"> 80's vibes</a>
                 </div>
                 <div class="section__halls_two">
-                    <a class="halls__link" href="#"> Star wars </a>
+                    <a class="halls__link" href="star-wars.html"> Star wars </a>
                 </div>
                 <div class="section__halls_three">
-                    <a class="halls__link" href="#"> Wild west</a>
+                    <a class="halls__link" href="wild-west.html"> Wild west</a>
                 </div>
                 <div class="section__halls_four">
                     <a class="halls__link" href="#"> Neon style</a>
@@ -188,9 +188,17 @@
                             <div class="time__input-row-group">
                                 <input placeholder="Дата" class="time__input time__input_date" type="text"
                                         onfocus="(this.type='date')" onblur="(this.type='text')" required="" name="date">
-                                <input placeholder="Время" class="time__input time__input_date" type="text"
+                                <input placeholder="Время" class="time__input time__input_date time__input_date-m" type="text"
                                         onfocus="(this.type='time')" onblur="(this.type='text')" required="" name="time">
-                            </div>
+                                        <select class="time__input time__input_persons-m" name="members" >  
+                                            <option selected> Сколько человек </option>
+                                            <option> 1 </option>
+                                            <option> 2 </option>
+                                            <option> 3 </option>
+                                            <option> 4 </option>
+                                            <option> 5 </option>
+                                        </select>
+                                    </div>
                             <select class="time__input time__input_persons" name="members" >  
                                 <option selected> Сколько человек </option>
                                 <option> 1 </option>
@@ -238,7 +246,8 @@
             <div class="about__wrapper">
                 <img class="about__image" src="img/about_collage.jpg" alt="collage" >
                 <div class="about__info">
-                    <p class="about__description">
+                    <img class="about__image-small" src="img/about_collage.jpg" alt="collage" >
+                    <p class="about__description about__description-first">
                         Для наших гостей мы создали концептуально новое игровое пространство виртуальной реальности
                         в центральной части города.
                     </p>
@@ -246,6 +255,7 @@
                         Каждый день мы стараемся создавать для вас самую лучшую игровую атмосферу и радовать Вас
                         топовыми игровыми разработками со всего мира.
                     </p>
+                    <img class="about__image-down" src="img/about_collage.jpg" alt="collage" >
                     <blockquote class="about__blockquote">
                         <q class="quote">
                             Game Over
@@ -274,6 +284,7 @@
                 <div class="review__img img__max">  
                 </div>
                 <div class="review__text text"> 
+                    <p class="review__author-down"> Макс Самойлов</p> 
                     <p class="text__description"> Отмечали здесь день рождения с компанией друзей, все было очень круто! VR очки это просто бомба,
                     никогда еще я не был в таком полном игровом погружении. Сервис на высоте!</p> 
                 </div>
@@ -284,6 +295,7 @@
                     <div class="review__img img__oksana">  
                     </div>
                     <div class="review__text text"> 
+                        <p class="review__author-down"> Оксана Григорьева</p> 
                         <p class="text__description"> Были в комнате Дикий Запад, пели в караоке под Шакиру,
                                 отличный получился корпоратив!
                                 У нас в городе больше нет подобных заведений</p> 
@@ -295,6 +307,7 @@
                         <div class="review__img img__nikita">  
                         </div>
                         <div class="review__text text"> 
+                            <p class="review__author-down review__author_nikita-down">Никита Ященко</p> 
                             <p class="text__description"> Немного подвисала игра в VR очках, а так все норм. 
                                 Крутое оформление комнаты в стиле звездных войн, попал в атмосферу космоса</p> 
                         </div>
@@ -312,11 +325,11 @@
         <div class="container container__faq">
             <h2 class="section__title section__faq_title"> Частые вопросы</h2>
             <ul class="faq__questions">
-                <li class="question"> Можно ли забронировать комнату онлайн?</li>
-                <li class="question"> Могут ли мне вернуть деньги за бронь?</li>
-                <li class="question"> Какая комната самая популярная</li>
-                <li class="question"> Как получить VIP карту?</li>
-                <li class="question"> Какая комната самая популярная?</li>
+                <li class="question quastions-first"> Можно ли забронировать комнату онлайн?</li>
+                <li class="question quastions-second"> Могут ли мне вернуть деньги за бронь?</li>
+                <li class="question quastions-third"> Какая комната самая популярная</li>
+                <li class="question quastions-fourth"> Как получить VIP карту?</li>
+                <li class="question quastions-five"> Какая комната самая популярная?</li>
             </ul>
         </div>
     </section>
@@ -329,8 +342,8 @@
             <address class="footer__address">
                 <ul class="footer__contacts">
                     <li class="footer__locate"><span>г. Москва</span>
-                        <span>ул. Аквамарина, 16</span></li>
-                    <li class="footer__phone"><a href="tel:89509302893">8(950)930-28-93</a></li>
+                        <span>ул. Усачёва, 29к3</span></li>
+                    <li class="footer__phone"><a href="tel:89509302893">8 (950) 930-28-93</a></li>
                     <li class="footer__mail"><a href="mailto:GameOver@gmail.com">GameOver@gmail.com</a></li>
                 </ul>
                 <ul class="footer__icons">
@@ -384,7 +397,7 @@
         <div class="sub_footer">
             <p class="sub_footer__text"> © Game Over, 2022</p>
             <p class="sub_footer__text sub_footer__mail">
-                <span> Design by Anastasia Ilina</span>
+                <span class="sub_footer__text-span"> Design by Anastasia Ilina</span>
                 <a href="mailto:ilina9825@gmail.com" class="sub_footer"> ilina9825@gmail.com</a>
             </p>
         </div>
