--- a/80s-vibes.html
+++ b/80s-vibes.html
@@ -17,13 +17,13 @@
             <nav class="header__nav nav">
                 <ul class="nav-list">
                     <li class="nav-list__item">
-                        <a class="nav-list__link" href="#halls">Залы</a></li>
+                        <a class="nav-list__link" href="#another__halls">Залы</a></li>
                     <li class="nav-list__item">
-                        <a class="nav-list__link" href="#about">О нас</a></li>
+                        <a class="nav-list__link" href="index.html#about">О нас</a></li>
                     <li class="nav-list__item">
-                        <a class="nav-list__link" href="#reserve">Бронь</a></li>
+                        <a class="nav-list__link" href="index.html#reserve">Бронь</a></li>
                     <li class="nav-list__item">
-                        <a class="nav-list__link" href="#review">Отзывы</a></li>
+                        <a class="nav-list__link" href="index.html#review">Отзывы</a></li>
                     <li class="nav-list__item">
                         <a class="nav-list__link" href="#footer">Контакты</a></li>
                 </ul>
@@ -36,7 +36,7 @@
 <main> 
     <section class="banner80">
         <div class="container banner80__container">
-            <a href="index.html"> <p class="banner80__back"> Вернуться назад</p> </a>
+            <a class="banner80__link" href="index.html"> <p class="banner80__back"> Вернуться назад</p> </a>
         </div>
         <div class="container-max">
             <div class="banner80__banner"> <p class="banner80__text">  80’s vibes </p> </div>
@@ -57,7 +57,7 @@
         </div>
         </div>
     </section>
-    <section class="other-halls"> 
+    <section class="other-halls" id="another__halls"> 
         <div class="container"> 
             <h2 class="other-halls__title"> Другие комнаты</h2>
             <div class="other-halls__list"> 
@@ -80,10 +80,11 @@
         <div class="footer__row">
             <address class="footer__address">
                 <ul class="footer__contacts">
-                    <li class="footer__locate"><span>г. Москва</span>
-                        <span>ул. Усачёва, 29к3</span></li>
-                    <li class="footer__phone"><a href="tel:89509302893">8 (950) 930-28-93</a></li>
-                    <li class="footer__mail"><a href="mailto:GameOver@gmail.com">GameOver@gmail.com</a></li>
+                    <li class="footer__locate">
+                        <span class="footer__min" >  <img class="footer__mini-icons footer__mini-icons-first"  src="img/icons-svg/location.svg" alt="location"> г. Москва</span>
+                        <span class="footer__locate-street">ул. Усачёва, 29к3</span></li>
+                    <li class="footer__phone"> <img class="footer__mini-icons"  src="img/icons-svg/phone-call.svg" alt="phone"> <a href="tel:89509302893">8 (950) 930-28-93</a></li>
+                    <li class="footer__mail"> <img class="footer__mini-icons"  src="img/icons-svg/mail.svg" alt="mail"> <a href="mailto:GameOver@gmail.com">GameOver@gmail.com</a></li>
                 </ul>
                 <ul class="footer__icons">
                     <li>
